--- a/style.css
+++ b/style.css
@@ -4,36 +4,37 @@ body {
   color: #333;
   font-family: Lato, sans-serif;
 }
-.aaa {
+.intro {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-.aaa img {
+.intro img {
   width: 100%;
 }
-.aaa .more_inf {
+.intro .intro__link {
   font-family: fantasy, cursive;
 }
 
 @media (max-width: 768px) {
-  .aaa { 
+  .intro { 
     text-align: center;
   }
 }
-.centered-main-page-element {
+.todo {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
-.task {
+.todo__input {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
-.task-row-wrapper {
+.add-item__wrapper {
   display: flex;
+  width: 100%;
 }
 ul {
   margin: 0;
@@ -121,12 +122,12 @@ li > label {
 li >    input[type="text"] {
   width: 226px;
 }
-button.delete img {
+button.todo__btn_delete img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+button.todo__btn_delete img:hover {
   transform: rotateZ(0);
 }
 
@@ -141,11 +142,11 @@ ul li input[type=text] {
   display: none;
 }
 
-ul li.editMode input[type=text] {
+ul li.list__item_editMode input[type=text] {
   display: inline-block;
   width: 224px;
 }
 
-ul li.editMode label {
+ul li.list__item_editMode label {
   display: none;
 }
