--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.page {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
@@ -22,12 +22,16 @@ body {
     text-align: center;
   }
 }
+
+.add-item {
+  margin: 16px 0;
+}
 .todo {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
-.todo__input {
+.todo__task {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
@@ -36,19 +40,25 @@ body {
   display: flex;
   width: 100%;
 }
-ul {
+.todo__list {
   margin: 0;
   padding: 0px;
 }
-li, 
-h3 {
+.list__item_editMode, 
+.list__item,
+.todo__heading {
   list-style: none;
 }
-input,
-button {
+.todo__input,
+.todo__checkbox,
+.todo__btn_edit,
+.todo__btn_delete,
+.todo__btn_add {
   outline: none;
 }
-button {
+.todo__btn_edit,
+.todo__btn_delete,
+.todo__btn_add {
   background: none;
   border: 0px;
   color: #888;
@@ -57,12 +67,14 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.todo__btn_edit:hover,
+.todo__btn_delete:hover,
+.todo__btn_add:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h3,
-label[for="new-task"] {
+.todo__heading,
+.add-item__new-task {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -71,7 +83,7 @@ label[for="new-task"] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.todo__input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -83,21 +95,21 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.todo__input:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.add-item__new-task {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+.add-item__input {
   width: 318px;
 }
 
 /* Task list */
-li {
+.list__item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -106,47 +118,48 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.list__item > * {
   vertical-align: middle;
 }
 
-li > input[type="checkbox"] {
+.list__item > .todo__checkbox {
   margin: 0 10px;
 }
-li > label {
+.todo__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
+  list-style:none;
 }
-li >    input[type="text"] {
+.list__item > .todo__input {
   width: 226px;
 }
-button.todo__btn_delete img {
+.todo__btn_delete img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.todo__btn_delete img:hover {
+.todo__btn_delete img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+#completed-tasks .todo__label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.list__item .todo__input{
   display: none;
 }
 
-ul li.list__item_editMode input[type=text] {
+.list__item.list__item_editMode .todo__input_editMode {
   display: inline-block;
   width: 224px;
 }
 
-ul li.list__item_editMode label {
+.list__item.list__item_editMode > .todo__label {
   display: none;
 }
